working on recyclerview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="kevin.android.fifaonline">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:name=".FifaApplication"
             android:allowBackup="true"
@@ -11,6 +12,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".presentation.match.MatchActivity">
+        </activity>
         <activity android:name=".presentation.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
