--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://repo.maven.apache.org/maven2'
+            name 'Maven Central'
+        }
     }
 }
 
